# Animation

./: CMakeLists.txt  animation.cpp
shaders/: animation.frag  animation.vert
